catalog/config/ingress/tekton-pipeline-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-pipeline-server
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tekton-pipeline-dev.owill.com.br
      http:
        paths:
          - path: /pull-request
            pathType: Prefix
            backend:
              service:
                name: el-github-pull-request
                port:
                  number: 8080
          
          - path: /deploy-k8s
            pathType: Prefix
            backend:
              service:
                name: el-deploy-k8s
                port:
                  number: 8080

          - path: /java-test
            pathType: Prefix
            backend:
              service:
                name: el-java-test
                port:
                  number: 8080

          - path: /go-test
            pathType: Prefix
            backend:
              service:
                name: el-go-test
                port:
                  number: 8080
