catalog/config/ingress/tekton-pipelines.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-pipeline-server
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tekton-pipeline-dev.owill.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-pipeline
                port:
                  number: 8080
